[gd_scene load_steps=10 format=3 uid="uid://c8vqgdk31bud5"]

[ext_resource type="Script" path="res://scripts/radioactive_enemy.gd" id="1_6vudu"]
[ext_resource type="Texture2D" uid="uid://dnyrle2v02e1f" path="res://assets/textures/enemy_radioactive_1.png" id="2_axya1"]
[ext_resource type="Script" path="res://scripts/Radiation.gd" id="2_v25tj"]
[ext_resource type="Texture2D" uid="uid://ki758f2b64c5" path="res://assets/textures/enemy_radioactive_2.png" id="3_5v7aj"]
[ext_resource type="Texture2D" uid="uid://blfj1iung1csx" path="res://assets/textures/enemy_radioactive_3.png" id="4_d4fyc"]
[ext_resource type="Texture2D" uid="uid://cb1eg7lovqwc5" path="res://assets/textures/enemy_radioactive_4.png" id="5_26y4l"]

[sub_resource type="CircleShape2D" id="CircleShape2D_elep1"]
radius = 90.0

[sub_resource type="SpriteFrames" id="SpriteFrames_g08by"]
animations = [{
"frames": [{
"duration": 2.0,
"texture": ExtResource("2_axya1")
}, {
"duration": 1.0,
"texture": ExtResource("3_5v7aj")
}, {
"duration": 2.0,
"texture": ExtResource("4_d4fyc")
}, {
"duration": 1.0,
"texture": ExtResource("5_26y4l")
}],
"loop": true,
"name": &"flying",
"speed": 5.0
}]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_jtyee"]
size = Vector2(57, 49)

[node name="RadioactiveEnemy" type="Area2D"]
script = ExtResource("1_6vudu")

[node name="Radiation" type="Area2D" parent="."]
script = ExtResource("2_v25tj")

[node name="CollisionShape2D" type="CollisionShape2D" parent="Radiation"]
position = Vector2(1, 1)
shape = SubResource("CircleShape2D_elep1")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
self_modulate = Color(1, 1, 1, 0.827451)
rotation = 3.14159
scale = Vector2(0.8, 0.8)
sprite_frames = SubResource("SpriteFrames_g08by")
animation = &"flying"
autoplay = "flying"
frame_progress = 0.10562

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(0.5, -8.5)
shape = SubResource("RectangleShape2D_jtyee")

[node name="VisibleOnScreenNotifier2D" type="VisibleOnScreenNotifier2D" parent="."]
position = Vector2(0, -155)

[connection signal="area_entered" from="." to="." method="_on_area_entered"]
[connection signal="body_entered" from="." to="." method="_on_body_entered"]
[connection signal="area_entered" from="Radiation" to="." method="_on_radiation_area_entered"]
[connection signal="body_entered" from="Radiation" to="." method="_on_radiation_body_entered"]
[connection signal="screen_exited" from="VisibleOnScreenNotifier2D" to="." method="_on_visible_on_screen_notifier_2d_screen_exited"]
